# espforge-rs

./: .gitignore  Cargo.toml  boo.txt  build.rs  justfile  main.rs  main.toml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_tests.rs  test_macros.rs
espforge/: Cargo.toml  askama.toml  build.rs  compile_command.rs  lib.rs
espforge/config/: espforge.rs  parse.rs
espforge/core/: mod.rs
espforge/examples/: mod.rs
espforge/examples/bare/: config.rs
espforge/examples/blink/: config.rs
espforge/examples/hello_world/: config.rs  main.rs.askama
espforge/templates/bare/: config.rs
espforge/templates/blink/: config.rs  main.rs.askama
espforge/templates/hello_world/: config.rs
espforge_macros/: Cargo.toml
espforge_macros/src/: lib.rs
espforge_test_macros/: Cargo.toml
espforge_test_macros/src/: lib.rs
examples/: blink.toml
hello-world/: Cargo.toml  wokwi.toml
samples/: 001.toml
samples/bare/: 001.toml  002.toml  003.toml  004.toml  005.toml  006.toml  007.toml
src/: build.txt
src/examples/bare/: config.toml  main.rs.askama
src/examples/blink/: config.toml  main.rs.askama
src/lib/: compile_command.rs  lib.rs
src/lib/config/: espforge.rs  mod.rs  parse.rs
src/lib/core/: generate.rs
src/lib/examples/hello_world/: config.toml
templates/: main.rs.askama
