[package]
name = "espforge-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.41"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
askama = "0.14.0"
clap = { version = "4.5.50", features = ["derive"] }
anyhow = "1.0.100"
thiserror = "2.0.17"

[lib]
name = "espforge_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "espforge"
path = "src/bin/main.rs"


